add sys design graphics

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,4 +35,5 @@ nav:
   - Home: index.mdl
   - Electrical:
       - Microcontroller Architecture: electrical/microcontrollers/microcontroller-architecture.md
+      - System Design: electrical/sysdesign/system-design.md
   - ⮤ Return to general documentation: https://ncsurobotics.github.io/
