Fix Link to Main Site

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,4 +36,4 @@ nav:
   - Electrical:
       - Microcontroller Architecture: electrical/microcontrollers/microcontroller-architecture.md
       - System Design: electrical/sysdesign/system-design.md
-  - ⮤ Return to general documentation: https://ncsurobotics.github.io/
+  - ⮤ Return to general documentation: https://ncsurobotics.github.io/Documentation
