--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,7 +32,7 @@ extra:
   generator: false
 copyright: AquaPack Robotics &copy; 2023 Released under <a id="footer-link" href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>
 nav:
-  - Home: index.mdl
+  - Home: index.md
   - Electrical:
       - Microcontroller Architecture: electrical/microcontrollers/microcontroller-architecture.md
       - System Design: electrical/sysdesign/system-design.md
